--- a/My_Notes/Bifurcation_thesis.html
+++ b/My_Notes/Bifurcation_thesis.html
@@ -78,7 +78,6 @@
 </ul>
 <h2 id="chapter-3-bifurcation-theory">Chapter 3: Bifurcation Theory</h2>
 <ul>
-<li><p>??? A bifurcation is a boundary in parameter space where the topological structure of the dynamic solution changes?</p></li>
 <li><p>A bifurcation boundary divides the entire parameter space of a certain model into regions with qualitatively the same type of solutions.</p>
 <ul>
 <li>Since L-mode and H-mode are qualitatively distinct, they are most likely separated by a bifurcation.</li>
@@ -94,7 +93,50 @@
 </ul></li>
 <li><p>The simplest form of any bifurcating system can be reduced is called the <em>topological norm form</em>.</p></li>
 <li><p>The least number of parameters needed to construct this topological norm form is called the <em>co-dimension</em>.</p></li>
+<li><p>Bifurcation theory describes BOTH the existence of stationary states but also analyzes the stability of them.</p></li>
+<li><p>Let's introduce a perturbation <span class="math">\(x \,\mapsto\, x_0 + x_1 e^{\lambda t}\)</span>, and <span class="math">\(x_0 \gg x_1\)</span> and <span class="math">\(\lambda\)</span> as the eigenvalue, which sign determines if the perturbation grows or not.</p>
+<ul>
+<li>For a system of <span class="math">\(N\)</span> equations, the eigenvalues become <span class="math">\(N\)</span>-dimensional complex vectors, with the signs of the real parts determining what is attracting or repelling.</li>
+</ul></li>
+<li><p>The <em>Hopf bifurcation</em> is another with co-dimension 1, with the real part of a pair of complex conjugated eigenvalues vanishing.</p>
+<ul>
+<li><p>This means that the referred steady-state changes from unstable to stable, or vice versa.</p></li>
+<li><p><em>Supercritical Hopf bifucation</em> is when there is a stable limit cycle surrounding the steady-state.</p></li>
+<li><p><em>Subcritical</em> is when there is an unstable (repelling) limit cycle surrounding the steady-state.</p></li>
+<li><p>When an unstable limit cycle grows and touches the stable limit cycle, they both vanish, causing a <em>global fold bifurcation</em>.</p></li>
+</ul></li>
 </ul>
-<!-- The codimension of a bifurcation is the number of parameters which must be varied for the bifurcation to occur. -->
+<h3 id="bifurcations-vs-l-h-transition-dynamics">3.2 Bifurcations vs L-H Transition Dynamics</h3>
+<ul>
+<li><p>Different types of observed transition dynamics can be recognized as certain types of bifurcations.</p>
+<ul>
+<li><p>Fold bifurcations are the natural way to describe sharp transitions, such as L-H AND H-L transitions; the natural way to combine two folds is shown in Fig 3.3.</p></li>
+<li><p>This gives TWO critical values for <span class="math">\(a\)</span>; this hysteresis behavior is characteristic of two co-dimension 1 fold bifurcations coming from a co-dimension 2 cusp bifurcation.</p>
+<ul>
+<li>The norm form of this: <span class="math">\(\dot{x} \,=\, a - bx - x^3\)</span>; <span class="math">\(b\)</span> determines the size of the hysteresis.</li>
+</ul></li>
+<li><p>The cusp bifurcation separates the parameter space into two regions: one with sharp transitions with hysteresis, and one with smooth transitions without fold bifurcations (with <span class="math">\(a\)</span> being what's scanned).</p></li>
+</ul></li>
+<li><p>Therefore, the cusp bif. organizes two types of L-H transition dynamics: smooth and sharp. Oscillatory behavior can arise due to a Hopf bif.</p>
+<ul>
+<li><p>There is a way that the Hopf bif. can be combined with the cusp bif, which can be view as a <em>degenerate Bogdanov-Takens bif</em>. This is <strong>the</strong> co-dimension 3 bif. referenced here.</p></li>
+<li><p>There are several equivalent unfoldings of this bif., seen as Eq. 3-5</p></li>
+</ul></li>
+<li><p>The original cusp bif. equation is coupled to a damped variable; as long as the coupled constant <span class="math">\(c\)</span> is below a critical value, the parameter space is the same as indicated in Fig. 3.3c.</p>
+<ul>
+<li><p>Any additional coupling will cause the model to be very sensitive to perturbations, making it less robust of a candidate for the L-H transition.</p></li>
+<li><p>At the critical value of <span class="math">\(c\)</span>, the co-dimension 3 bif. is encountered at the position of the cusp bif. A regime of limit cycle solutions opens up, covering the original cusp. See Fig. 3.4.</p>
+<ul>
+<li><p>The limit of cycle solutions are produced by Hopf bifs. If both steady-states are unstable, the system will oscillate according to this limit cycle. However, if one steady-state turns stable, the system will transit towards it.</p></li>
+<li><p>Oscillatory solutions only occur in the region surrounding the cusp bif. point where there are no steady-states.</p></li>
+</ul></li>
+<li><p>The specific arrangement of smooth and sharp transitions separated by the oscillatory transitions is characteristic of an underlying co-dimension 3 bif. The quality of an H-mode model can be judged by the existence of the co-dimension 3 bif.</p>
+<ul>
+<li><p>If the model does not contain this bif., it can not describe all different types of L-H transitions.</p></li>
+<li><p>If a model does describe all of the types of transitions without having this co-dimension 3 bif., there is a parameter in the model that could pull behavior into inappropriate regions of parameter space, <em>e.g.</em> oscillations far away from the L-H transition point. Therefore, co-dimension 3 bif is required to be robust.</p></li>
+</ul></li>
+</ul></li>
+</ul>
+<h2 id="chapter-4-bifurcation-theory-for-the-l-h-transition-in-magnetically-confined-fusion-plasmas">Chapter 4: Bifurcation Theory for the L-H Transition in Magnetically-Confined Fusion Plasmas</h2>
 </body>
 </html>
