--- a/My_Notes/Bifurcation_thesis.html
+++ b/My_Notes/Bifurcation_thesis.html
@@ -138,5 +138,19 @@
 </ul></li>
 </ul>
 <h2 id="chapter-4-bifurcation-theory-for-the-l-h-transition-in-magnetically-confined-fusion-plasmas">Chapter 4: Bifurcation Theory for the L-H Transition in Magnetically-Confined Fusion Plasmas</h2>
+<h3 id="introduction-1">4.1 Introduction</h3>
+<ul>
+<li><p>Two separate fold bifurcations are necessary to describe the hysteresis, since the heating to trigger the L-H transistion is different than for H-L transition.</p></li>
+<li><p>Two types of parameters affect the existence and magnitude of the hysteresis:</p>
+<ul>
+<li><p>One controls the existence by causing the two fold bifs. to meet in the cusp bif. This causes smooth transitions.</p></li>
+<li><p>The second causes the hysteresis to be replaced by limit cycle oscillations from a Hopf bif.</p></li>
+<li><p>These two parameters branch off in parameter space out of the underlying co-dimension 3 bif. The analysis of this bif. it is possible to find how the parameters affect the evolution.</p></li>
+</ul></li>
+<li><p>The lowest-order system containing this co-dimension 3 bif. is the Fitz-Hugh-Nagumo: <span class="math">\[\dot{x} \,=\, -a - bx - x^3 + cy \\ \dot{y} \,=\, -x - y\]</span>.</p>
+<ul>
+<li>For <span class="math">\(c = 0\)</span>, the steady state solutions can have one or multiple possibilities depending on <span class="math">\(a\)</span> and <span class="math">\(b\)</span>.</li>
+</ul></li>
+</ul>
 </body>
 </html>
