--- a/My_Notes/Bifurcation_thesis.html
+++ b/My_Notes/Bifurcation_thesis.html
@@ -32,6 +32,7 @@
 <li><p>How does the bifurcation structure change when changing the transport reduction mechanism?</p></li>
 <li><p>How does the bifurcation structure change when adding an extra dynamical equation for turbulence? <strong>AND</strong> What is the best dynamical description of the turbulence reduction by sheared <span class="math">\(\mathbf{E}\times\mathbf{B}\)</span>-flows?</p></li>
 </ul>
+<hr />
 <h2 id="chapter-2-l-h-transitions-in-magnetically-confined-plasmas">Chapter 2: L-H Transitions in Magnetically-Confined Plasmas</h2>
 <h3 id="experimental-observations">2.1 Experimental Observations</h3>
 <ul>
@@ -76,6 +77,7 @@
 <li><p>There is no clear separation in length scales between the two... so it is unclear how they are distinct.</p></li>
 </ul></li>
 </ul>
+<hr />
 <h2 id="chapter-3-bifurcation-theory">Chapter 3: Bifurcation Theory</h2>
 <ul>
 <li><p>A bifurcation boundary divides the entire parameter space of a certain model into regions with qualitatively the same type of solutions.</p>
@@ -137,6 +139,7 @@
 </ul></li>
 </ul></li>
 </ul>
+<hr />
 <h2 id="chapter-4-bifurcation-theory-for-the-l-h-transition-in-magnetically-confined-fusion-plasmas">Chapter 4: Bifurcation Theory for the L-H Transition in Magnetically-Confined Fusion Plasmas</h2>
 <h3 id="introduction-1">4.1 Introduction</h3>
 <ul>
@@ -147,9 +150,39 @@
 <li><p>The second causes the hysteresis to be replaced by limit cycle oscillations from a Hopf bif.</p></li>
 <li><p>These two parameters branch off in parameter space out of the underlying co-dimension 3 bif. The analysis of this bif. it is possible to find how the parameters affect the evolution.</p></li>
 </ul></li>
-<li><p>The lowest-order system containing this co-dimension 3 bif. is the Fitz-Hugh-Nagumo: <span class="math">\[\dot{x} \,=\, -a - bx - x^3 + cy \\ \dot{y} \,=\, -x - y\]</span>.</p>
+<li><p>The lowest-order system containing this co-dimension 3 bif. is the FitzHugh-Nagumo: <span class="math">\[\dot{x} \,=\, -a - bx - x^3 + cy \\ \dot{y} \,=\, -x - y\]</span></p>
 <ul>
-<li>For <span class="math">\(c = 0\)</span>, the steady state solutions can have one or multiple possibilities depending on <span class="math">\(a\)</span> and <span class="math">\(b\)</span>.</li>
+<li><p>For <span class="math">\(c = 0\)</span>, the steady state solutions can have one or multiple possibilities depending on <span class="math">\(a\)</span> and <span class="math">\(b\)</span>.</p></li>
+<li><p>For <span class="math">\(c \neq 0\)</span>, the bif. structure stays the same until <span class="math">\(c\)</span> is above some critical value, to which the cusp turns into the region of limit cycle solutions (oscillatory solutions).</p></li>
+<li><p>If a detailed model for the edge transport barrier dynamics contains this co-dimension 3 bif., it is proven that the regions of parameter space with L-mode, H-mode, hysteresis, and dithering are organized in the same way as the FitzHugh-Nagumo model.</p></li>
+</ul></li>
+</ul>
+<h3 id="generalized-bifurcation-theory">4.2 Generalized Bifurcation Theory</h3>
+<ul>
+<li><p>A system of PDEs can be viewed as an infinite system of ODEs, with each ODE describing the evolution of a single point coupled to its neighboring points.</p></li>
+<li><p>Summarizing, to have a general dynamical system with the co-dimension 3 bif., two vectors <span class="math">\(\mathbf{v}_1\)</span> and <span class="math">\(\mathbf{u}_1\)</span> can be found that satisfy: <span class="math">\[M_1 \mathbf{v}_1 \,=\, 0 ~~~~~~~~~~~~~~~~ \mathbf{u}_1^T M_1 \,=\, 0 \\ \mathbf{u}_1^T (M_2 \mathbf{v}_1) \mathbf{v}_1 \,=\, 0 ~~~~~~~~ \mathbf{u}_1^T \cdot \mathbf{v}_1 \,=\, 0\]</span></p></li>
+<li><p>To obtain the parameter threshold values for the different transitions, the fold bif. is found by analyzing steady-state conditions. The Hopf bif. need further investigation.</p>
+<ul>
+<li><p>The Hopf bif. can be found by unfolding the Bogdanov-Takens bif. in all its parameters and by identifying the specific direction which keeps the eigenvalues purely imaginary, <em>i.e.</em> the Hopf condition: <span class="math">\(M(\mathbf{v} - \mathbf{v}_{new}) \,=\, i\omega(\mathbf{v} - \mathbf{v}_{new}), ~~~ M = M_1 + \delta M\)</span></p></li>
+<li><p>After combining, we can come up with a rewritten condition that is invariant under transformation: <span class="math">\[\mathbf{u}_1^T \cdot \mathbf{v}_2 (\mathbf{u}_1^T M_3 \mathbf{v}_2 + \mathbf{u}_2^T M_3 \mathbf{v}_1) \,=\, \mathbf{u}_2^T \cdot \mathbf{v}_2 (\mathbf{u}_1^T M_3 \mathbf{v}_1)\]</span></p></li>
+</ul></li>
+</ul>
+<h3 id="finite-dimensional-case">4.3 Finite Dimensional Case</h3>
+<ul>
+<li><p>Cusp: <span class="math">\(a^2 \,=\, -\dfrac{4}{27}(b + c)^3\)</span></p></li>
+<li><p>Hopf: <span class="math">\(a^2 \,=\, -\dfrac{4}{27}(b + 1)\left(b + \dfrac{3}{2}c - \dfrac{1}{2}\right)^2\)</span></p></li>
+</ul>
+<h3 id="transport-model-for-the-l-h-transition">4.4 Transport Model for the L-H Transition</h3>
+<ul>
+<li><p>Continuity equation for mass (density) and energy, with a single temperature and all the particle and energy deposition into the plasma is somewhere inthe the core outside of the model: <span class="math">\[\frac{\partial n}{\partial t} \,=\, \frac{\partial \Gamma}{\partial r} \\ \frac{\partial}{\partial t} \left(\frac{nT}{\gamma - 1}\right) \,=\, -\frac{\partial q}{\partial r}\]</span></p></li>
+<li><p>Particle and heat flux (<span class="math">\(\gamma\)</span> is the adiabatic index): <span class="math">\[\Gamma \,=\, -D \frac{\partial n}{\partial r} \\ q \,=\, -\chi n \frac{\partial T}{\partial r} + \frac{\Gamma T}{\gamma - 1}\]</span></p></li>
+<li><p>Going to higher confinement can be described as a reduction of transport coefficients: particle <span class="math">\(D\)</span> and heat <span class="math">\(\chi\)</span></p></li>
+<li><p>In the turbulent transport model used here, only a mean flow due to <span class="math">\(\mathbf{E}\times\mathbf{B}\)</span>-drift is used, such that the transport coefficients become a direct function of the normalized radial electric field: <span class="math">\[Z \,=\, \frac{\rho_p e E_r}{T_i}\]</span></p></li>
+<li><p>To properly describe dynamics, the evolution of the radial electric field must be taken into account via Ampère's law: <span class="math">\[\epsilon \frac{\partial Z}{\partial t} \,=\, \mu \frac{\partial^2 Z}{\partial r^2} + c_n \frac{T}{n^2} \frac{\partial n}{\partial r} + \frac{c_T}{n} \frac{\partial T}{\partial r} - G(Z)\]</span></p>
+<ul>
+<li><p><span class="math">\(\epsilon \,=\, B_p^2 / (B^2 \nu_i)\)</span> is the dielectric constant</p></li>
+<li><p>The 1st term on the RHS is the radial currents, and <span class="math">\(\mu \sim \rho_p^2, the ratio of viscosity to collision frequency\)</span></p></li>
+<li><p>The 2nd and 3rd terms of the RHS are due to the bipolar part of the anomalous cross field flux, <em>i.e.</em> the excess flux of electrons compared to ions.</p></li>
 </ul></li>
 </ul>
 </body>
