Typo fixes, and added started Radial Currents

--- a/My_Notes/Bifurcation_thesis.html
+++ b/My_Notes/Bifurcation_thesis.html
@@ -30,7 +30,8 @@
 <li><p>How do these 1-D bifurcating models combine transitions in time and space?</p></li>
 <li><p>What is the bifurcation structure of the model proosed by Zohm?</p></li>
 <li><p>How does the bifurcation structure change when changing the transport reduction mechanism?</p></li>
-<li><p>How does the bifurcation structure change when adding an extra dynamical equation for turbulence? <strong>AND</strong> What is the best dynamical description of the turbulence reduction by sheared <span class="math">\(\mathbf{E}\times\mathbf{B}\)</span>-flows?</p></li>
+<li><p>How does the bifurcation structure change when adding an extra dynamical equation for turbulence?</p></li>
+<li><p>What is the best dynamical description of the turbulence reduction by sheared <span class="math">\(\mathbf{E}\times\mathbf{B}\)</span>-flows?</p></li>
 </ul>
 <hr />
 <h2 id="chapter-2-l-h-transitions-in-magnetically-confined-plasmas">Chapter 2: L-H Transitions in Magnetically-Confined Plasmas</h2>
